--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
+    "expo-localization": "~9.1.0",
     "expo-notifications": "~0.8.2",
     "expo-permissions": "~10.0.0",
     "expo-splash-screen": "~0.8.1",
     "expo-status-bar": "~1.0.3",
+    "i18n-js": "^3.8.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "16.13.1",
